Tue May 23 21:59:01 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/xtext.c:
	* src/fe-gnome/xtext.h:
	  - Add two new signals "word_enter" and "word_leave".
	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/conversation-panel.c:
	  - The "whois tooltip" is now also displayed in the
	    conversation panel!

Mon May 22 19:49:29 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* po/POTFILES.in:
	  - Add src/fe-gnome/userlist.c in the list of translatable files.

Sun May 21 16:34:23 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Change "Auto-join on startup" to "Auto-join on connect" to
	    hopefully make the behavior more clear. (#338300)

Sun May 21 19:06:43 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/common/plugin.c:
	  - Backport from xchat CVS.
	  - xchat_get_info can now returns session independent informations
	    when none session is started. It should fix a crasher when we
	    try to load the Perl plugin without any session started.
	    (Launchpad: #45235)

Sat May 20 17:28:42 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/Makefile.am:
	  - Change library reference to hopefully fix some builds. (#331679)

Sat May 20 17:19:53 MDT 2006  Przemyslaw Grzegorczyk <pgrzegorczyk@gmail.com>

	* configure.ac:
	* po/LINGUAS:
	  - Update for intltool 0.35 and new po/LINGUAS standards. (#339300)

Sat May 20 15:45:18 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences.c:
	  - Add gconf listeners to update preferences when they change in
	    the gconf daemon. (#332926)

Wed May 17 23:53:21 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/irc-network.c:
	  - Add encodings KOI8-R (Cyrillic) and CP1257 (Baltic).
	    (#341897)

Sun May 14 18:29:10 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/fe-gnome.c:
	  - Don't use the "--no-auto" option when we save the
	    GNOME session. (Launchpad: #39863)
